force-app/main/default/objects/Finish_Job__c/Finish_Job__c.object-meta.xml
<CustomObject>
    <label>Finish Job</label>
    <nameField>
        <displayFormat>FJ-{00000000}</displayFormat>
        <label>Finish Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finish Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>