force-app/main/default/objects/Finish_Job__c/fields/Accountability_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accountability_Notes__c</fullName>
    <label>Accountability Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>