force-app/main/default/objects/Finish_Job__c/fields/Completion_Photo_Count__c.field-meta.xml
<CustomField>
    <fullName>Completion_Photo_Count__c</fullName>
    <label>Completion Photo Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>