force-app/main/default/objects/Finish_Job__c/fields/FJ_Date__c.field-meta.xml
<CustomField>
    <fullName>FJ_Date__c</fullName>
    <label>Finish Job Date</label>
    <type>Date</type>
</CustomField>