force-app/main/default/objects/Finish_Job__c/fields/FJ_Reason__c.field-meta.xml
<CustomField>
    <fullName>FJ_Reason__c</fullName>
    <label>FJ Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2PM Red</fullName>
            </value>
            <value>
                <fullName>Manager Review</fullName>
            </value>
            <value>
                <fullName>CM Report</fullName>
            </value>
            <value>
                <fullName>QI Review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>