force-app/main/default/objects/Finish_Job__c/fields/FJ_Status__c.field-meta.xml
<CustomField>
    <fullName>FJ_Status__c</fullName>
    <label>FJ Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed - No Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>