force-app/main/default/objects/Finish_Job__c/fields/FM__c.field-meta.xml
<CustomField>
    <fullName>FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Finish Jobs FM</relationshipLabel>
    <relationshipName>Finish_Jobs_FM</relationshipName>
    <type>Lookup</type>
</CustomField>