force-app/main/default/objects/Finish_Job__c/fields/LOVING_Parent_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>LOVING_Parent_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Work Order (LOVING)</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Finish Jobs</relationshipLabel>
    <relationshipName>Finish_Jobs_LOVING</relationshipName>
    <type>Lookup</type>
</CustomField>