force-app/main/default/objects/Finish_Job__c/fields/Parent_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Finish Jobs</relationshipLabel>
    <relationshipName>Finish_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>